--- a/themes/dream/layouts/partials/disqus.html
+++ b/themes/dream/layouts/partials/disqus.html
@@ -14,7 +14,7 @@
         {{ end }}
     };
     function initDisqus() {
-        if (["localhost", "127.0.0.1"].indexOf(window.location.hostname) != -1) {
+        if (["0.0.0.0", "127.0.0.1"].indexOf(window.location.hostname) != -1) {
             document.getElementById('disqus_thread').innerHTML = 'Disqus comments not available by default when the website is previewed locally.';
             return;
         }
