--- a/themes/dream/layouts/partials/commentSystems.html
+++ b/themes/dream/layouts/partials/commentSystems.html
@@ -5,7 +5,7 @@
 {{ end }}
 
 {{ if site.Params.utterancesRepo }}
-<template x-if="['localhost', '127.0.0.1'].indexOf(window.location.hostname) == -1">
+<template x-if="['0.0.0.0', '127.0.0.1'].indexOf(window.location.hostname) == -1">
   <article>
     <script
       src="https://utteranc.es/client.js"
