--- a/themes/dream/layouts/partials/nav.html
+++ b/themes/dream/layouts/partials/nav.html
@@ -21,7 +21,7 @@
       {{ if or site.Params.headerTitle site.Params.motto }}
       <div>
         {{ if site.Params.headerTitle }}
-        <a href="{{ site.BaseURL }}" class="text-lg font-semibold cursor-pointer">
+        <a href="{{ . | relURL }}" class="text-lg font-semibold cursor-pointer">
           {{ site.Params.headerTitle }}
         </a>
         {{ end }}
