--- a/themes/dream/assets/css/output.css
+++ b/themes/dream/assets/css/output.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.5 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.11 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -573,6 +573,7 @@
     width: clamp(3rem, 20rem, 100%);
     height: var(--size);
     font-size: 0.875rem;
+    touch-action: manipulation;
     border-start-start-radius: var(--join-ss, var(--radius-field));
     border-start-end-radius: var(--join-se, var(--radius-field));
     border-end-start-radius: var(--join-es, var(--radius-field));
@@ -605,6 +606,9 @@
           outline-offset: 2px;
         }
       }
+    }
+    :where(input[type="url"]), :where(input[type="email"]) {
+      direction: ltr;
     }
     :where(input[type="date"]) {
       display: inline-block;
@@ -924,6 +928,9 @@
     :where(.dropdown-content) {
       inset-inline-end: calc(0.25rem * 0);
       translate: 0 0;
+      [dir="rtl"] & {
+        translate: 0 0;
+      }
     }
     &.dropdown-left {
       --anchor-h: left;
@@ -1127,6 +1134,9 @@
     &:where(*:not(:first-child, :disabled, [disabled], .btn-disabled)) {
       margin-inline-start: calc(var(--border, 1px) * -1);
       margin-block-start: 0;
+    }
+    &:where(*:is(:disabled, [disabled], .btn-disabled)) {
+      border-width: var(--border, 1px) 0 var(--border, 1px) var(--border, 1px);
     }
   }
   .prose {
@@ -1562,31 +1572,6 @@
     --badge-fg: var(--color-base-content);
     --size: calc(var(--size-selector, 0.25rem) * 6);
     height: var(--size);
-    &.badge-outline {
-      --badge-fg: var(--badge-color);
-      --badge-bg: #0000;
-      background-image: none;
-      border-color: currentColor;
-    }
-    &.badge-dash {
-      --badge-fg: var(--badge-color);
-      --badge-bg: #0000;
-      background-image: none;
-      border-color: currentColor;
-      border-style: dashed;
-    }
-    &.badge-soft {
-      color: var(--badge-color, var(--color-base-content));
-      background-color: var(--badge-color, var(--color-base-content));
-      @supports (color: color-mix(in lab, red, red)) {
-        background-color: color-mix( in oklab, var(--badge-color, var(--color-base-content)) 8%, var(--color-base-100) );
-      }
-      border-color: var(--badge-color, var(--color-base-content));
-      @supports (color: color-mix(in lab, red, red)) {
-        border-color: color-mix( in oklab, var(--badge-color, var(--color-base-content)) 10%, var(--color-base-100) );
-      }
-      background-image: none;
-    }
   }
   .card-body {
     display: flex;
@@ -1836,9 +1821,6 @@
   .h-\[60vh\] {
     height: 60vh;
   }
-  .w-2\/3 {
-    width: calc(2/3 * 100%);
-  }
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
@@ -2082,6 +2064,15 @@
         --btn-fg: currentColor;
       }
     }
+    @media (hover: none) {
+      &:hover:not(.btn-active, :active, :focus-visible, :disabled, [disabled], .btn-disabled) {
+        --btn-shadow: "";
+        --btn-bg: #0000;
+        --btn-border: #0000;
+        --btn-noise: none;
+        --btn-fg: currentColor;
+      }
+    }
   }
   .prose-quoteless {
     :where(blockquote p:first-of-type):not(:where([class~="not-prose"],[class~="not-prose"] *))::before {
@@ -2257,11 +2248,6 @@
       margin-top: calc(var(--spacing) * 12);
     }
   }
-  .lg\:block {
-    @media (width >= 64rem) {
-      display: block;
-    }
-  }
   .lg\:flex {
     @media (width >= 64rem) {
       display: flex;
@@ -2381,6 +2367,7 @@
   background-position: center;
   background-size: cover;
   z-index: -1;
+  transition: all 0.3s ease-in-out;
 }
 .flip-container {
   width: 100vw;
@@ -2707,28 +2694,28 @@
   @media (prefers-color-scheme: dark) {
     :root {
       color-scheme: dark;
-      --color-base-100: oklch(20.84% 0.008 17.911);
-      --color-base-200: oklch(18.522% 0.007 17.911);
-      --color-base-300: oklch(16.203% 0.007 17.911);
-      --color-base-content: oklch(83.768% 0.001 17.911);
-      --color-primary: oklch(68.628% 0.185 148.958);
-      --color-primary-content: oklch(0% 0 0);
-      --color-secondary: oklch(69.776% 0.135 168.327);
-      --color-secondary-content: oklch(13.955% 0.027 168.327);
-      --color-accent: oklch(70.628% 0.119 185.713);
-      --color-accent-content: oklch(14.125% 0.023 185.713);
-      --color-neutral: oklch(30.698% 0.039 171.364);
-      --color-neutral-content: oklch(86.139% 0.007 171.364);
-      --color-info: oklch(72.06% 0.191 231.6);
-      --color-info-content: oklch(0% 0 0);
-      --color-success: oklch(64.8% 0.15 160);
-      --color-success-content: oklch(0% 0 0);
-      --color-warning: oklch(84.71% 0.199 83.87);
-      --color-warning-content: oklch(0% 0 0);
-      --color-error: oklch(71.76% 0.221 22.18);
-      --color-error-content: oklch(0% 0 0);
+      --color-base-100: oklch(28.822% 0.022 277.508);
+      --color-base-200: oklch(26.805% 0.02 277.508);
+      --color-base-300: oklch(24.787% 0.019 277.508);
+      --color-base-content: oklch(97.747% 0.007 106.545);
+      --color-primary: oklch(75.461% 0.183 346.812);
+      --color-primary-content: oklch(15.092% 0.036 346.812);
+      --color-secondary: oklch(74.202% 0.148 301.883);
+      --color-secondary-content: oklch(14.84% 0.029 301.883);
+      --color-accent: oklch(83.392% 0.124 66.558);
+      --color-accent-content: oklch(16.678% 0.024 66.558);
+      --color-neutral: oklch(39.445% 0.032 275.524);
+      --color-neutral-content: oklch(87.889% 0.006 275.524);
+      --color-info: oklch(88.263% 0.093 212.846);
+      --color-info-content: oklch(17.652% 0.018 212.846);
+      --color-success: oklch(87.099% 0.219 148.024);
+      --color-success-content: oklch(17.419% 0.043 148.024);
+      --color-warning: oklch(95.533% 0.134 112.757);
+      --color-warning-content: oklch(19.106% 0.026 112.757);
+      --color-error: oklch(68.22% 0.206 24.43);
+      --color-error-content: oklch(13.644% 0.041 24.43);
       --radius-selector: 1rem;
-      --radius-field: 2rem;
+      --radius-field: 0.5rem;
       --radius-box: 1rem;
       --size-selector: 0.25rem;
       --size-field: 0.25rem;
@@ -2772,41 +2759,36 @@
   }
 }
 @layer base {
-  :root:has(input.theme-controller[value=forest]:checked),[data-theme=forest] {
+  :root:has(input.theme-controller[value=dracula]:checked),[data-theme=dracula] {
     color-scheme: dark;
-    --color-base-100: oklch(20.84% 0.008 17.911);
-    --color-base-200: oklch(18.522% 0.007 17.911);
-    --color-base-300: oklch(16.203% 0.007 17.911);
-    --color-base-content: oklch(83.768% 0.001 17.911);
-    --color-primary: oklch(68.628% 0.185 148.958);
-    --color-primary-content: oklch(0% 0 0);
-    --color-secondary: oklch(69.776% 0.135 168.327);
-    --color-secondary-content: oklch(13.955% 0.027 168.327);
-    --color-accent: oklch(70.628% 0.119 185.713);
-    --color-accent-content: oklch(14.125% 0.023 185.713);
-    --color-neutral: oklch(30.698% 0.039 171.364);
-    --color-neutral-content: oklch(86.139% 0.007 171.364);
-    --color-info: oklch(72.06% 0.191 231.6);
-    --color-info-content: oklch(0% 0 0);
-    --color-success: oklch(64.8% 0.15 160);
-    --color-success-content: oklch(0% 0 0);
-    --color-warning: oklch(84.71% 0.199 83.87);
-    --color-warning-content: oklch(0% 0 0);
-    --color-error: oklch(71.76% 0.221 22.18);
-    --color-error-content: oklch(0% 0 0);
+    --color-base-100: oklch(28.822% 0.022 277.508);
+    --color-base-200: oklch(26.805% 0.02 277.508);
+    --color-base-300: oklch(24.787% 0.019 277.508);
+    --color-base-content: oklch(97.747% 0.007 106.545);
+    --color-primary: oklch(75.461% 0.183 346.812);
+    --color-primary-content: oklch(15.092% 0.036 346.812);
+    --color-secondary: oklch(74.202% 0.148 301.883);
+    --color-secondary-content: oklch(14.84% 0.029 301.883);
+    --color-accent: oklch(83.392% 0.124 66.558);
+    --color-accent-content: oklch(16.678% 0.024 66.558);
+    --color-neutral: oklch(39.445% 0.032 275.524);
+    --color-neutral-content: oklch(87.889% 0.006 275.524);
+    --color-info: oklch(88.263% 0.093 212.846);
+    --color-info-content: oklch(17.652% 0.018 212.846);
+    --color-success: oklch(87.099% 0.219 148.024);
+    --color-success-content: oklch(17.419% 0.043 148.024);
+    --color-warning: oklch(95.533% 0.134 112.757);
+    --color-warning-content: oklch(19.106% 0.026 112.757);
+    --color-error: oklch(68.22% 0.206 24.43);
+    --color-error-content: oklch(13.644% 0.041 24.43);
     --radius-selector: 1rem;
-    --radius-field: 2rem;
+    --radius-field: 0.5rem;
     --radius-box: 1rem;
     --size-selector: 0.25rem;
     --size-field: 0.25rem;
     --border: 1px;
     --depth: 0;
     --noise: 0;
-  }
-}
-@layer base {
-  :root:has( .modal-open, .modal[open], .modal:target, .modal-toggle:checked, .drawer:not([class*="drawer-open"]) > .drawer-toggle:checked ) {
-    overflow: hidden;
   }
 }
 @layer base {
@@ -2817,10 +2799,7 @@
 }
 @layer base {
   :root {
-    scrollbar-color: currentColor #0000;
-    @supports (color: color-mix(in lab, red, red)) {
-      scrollbar-color: color-mix(in oklch, currentColor 35%, #0000) #0000;
-    }
+    --fx-noise: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.34' numOctaves='4' stitchTiles='stitch'%3E%3C/feTurbulence%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)' opacity='0.2'%3E%3C/rect%3E%3C/svg%3E");
   }
 }
 @layer base {
@@ -2845,20 +2824,28 @@
 }
 @layer base {
   :root {
-    --fx-noise: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.34' numOctaves='4' stitchTiles='stitch'%3E%3C/feTurbulence%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)' opacity='0.2'%3E%3C/rect%3E%3C/svg%3E");
-  }
-  .chat {
-    --mask-chat: url("data:image/svg+xml,%3csvg width='13' height='13' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='M0 11.5004C0 13.0004 2 13.0004 2 13.0004H12H13V0.00036329L12.5 0C12.5 0 11.977 2.09572 11.8581 2.50033C11.6075 3.35237 10.9149 4.22374 9 5.50036C6 7.50036 0 10.0004 0 11.5004Z'/%3e%3c/svg%3e");
+    scrollbar-color: currentColor #0000;
+    @supports (color: color-mix(in lab, red, red)) {
+      scrollbar-color: color-mix(in oklch, currentColor 35%, #0000) #0000;
+    }
   }
 }
-@keyframes dropdown {
-  0% {
-    opacity: 0;
+@layer base {
+  :root:has( .modal-open, .modal[open], .modal:target, .modal-toggle:checked, .drawer:not([class*="drawer-open"]) > .drawer-toggle:checked ) {
+    overflow: hidden;
   }
 }
 @keyframes progress {
   50% {
     background-position-x: -115%;
+  }
+}
+@keyframes radio {
+  0% {
+    padding: 5px;
+  }
+  50% {
+    padding: 3px;
   }
 }
 @keyframes toast {
@@ -2871,18 +2858,15 @@
     opacity: 1;
   }
 }
+@keyframes dropdown {
+  0% {
+    opacity: 0;
+  }
+}
 @keyframes rating {
   0%, 40% {
     scale: 1.1;
     filter: brightness(1.05) contrast(1.05);
-  }
-}
-@keyframes radio {
-  0% {
-    padding: 5px;
-  }
-  50% {
-    padding: 3px;
   }
 }
 @keyframes skeleton {
